<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>

    <string name="hello_world">Hello world!</string>

    <string name="menu_signout">Sign Out</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_invitations">Invitations</string>
    <string name="menu_send_invitations">Send Invitation</string>

</resources>
