<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_invitations"
        android:showAsAction="never"
        android:title="@string/menu_invitations" />
    
    <item
        android:id="@+id/menu_send_invitations"
        android:showAsAction="never"
        android:title="@string/menu_send_invitations" />
    
    <item
        android:id="@+id/menu_leaderboard"
        android:showAsAction="never"
        android:title="@string/menu_leaderboard" />
    
    <item
        android:id="@+id/menu_achievements"
        android:showAsAction="never"
        android:title="@string/menu_achievements" />
    
    <item
        android:id="@+id/menu_signout"
        android:showAsAction="never"
        android:title="@string/menu_signout" />

</menu>